--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dbbdf9">  <td>23/08/18 05:32:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2.JavaTestTest()[pri:0, instance:parallelScript.Sample2@62230c58]">JavaTestTest</td> 
-  <td>main@1063980005</td>   <td></td> </tr>
-<tr bgcolor="dbbdf9">  <td>23/08/18 05:32:15</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2.PythonTestTest()[pri:0, instance:parallelScript.Sample2@62230c58]">PythonTestTest</td> 
-  <td>main@1063980005</td>   <td></td> </tr>
-<tr bgcolor="dbbdf9">  <td>23/08/18 05:32:15</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2.SeleniumTestTest()[pri:0, instance:parallelScript.Sample2@62230c58]">SeleniumTestTest</td> 
-  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:49:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CSVExample.InitializeDriver()[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">&gt;&gt;InitializeDriver</td> 
+<td>&nbsp;</td>  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:49:59</td>   <td>2947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CSVExample.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">loginPageTest</td> 
+  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:03</td>   <td>6435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CSVExample.teardown()[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:03</td>   <td>6522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CSVExample.InitializeDriver()[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">&gt;&gt;InitializeDriver</td> 
+<td>&nbsp;</td>  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:04</td>   <td>7822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CSVExample.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">loginPageTest</td> 
+  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:27</td>   <td>31298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CSVExample.teardown()[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:28</td>   <td>31372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CSVExample.InitializeDriver()[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">&gt;&gt;InitializeDriver</td> 
+<td>&nbsp;</td>  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:29</td>   <td>32756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CSVExample.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">loginPageTest</td> 
+  <td>main@2074820378</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>23/08/21 05:50:52</td>   <td>56118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CSVExample.teardown()[pri:0, instance:dataDrivenExample.CSVExample@15aab8c6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2074820378</td>   <td></td> </tr>
 </table>
